--- a/TP3ProgJeux/TP3ProgJeux.vcxproj
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="point_bonus.cpp" />
     <ClCompile Include="projectile.cpp" />
     <ClCompile Include="scrolling_background.cpp" />
+    <ClCompile Include="shield.cpp" />
     <ClCompile Include="text.cpp" />
     <ClCompile Include="tile.cpp" />
     <ClCompile Include="upgraded_turret.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="point_bonus.h" />
     <ClInclude Include="projectile.h" />
     <ClInclude Include="scrolling_background.h" />
+    <ClInclude Include="shield.h" />
     <ClInclude Include="text.h" />
     <ClInclude Include="tile.h" />
     <ClInclude Include="upgraded_turret.h" />
