--- a/TP3ProgJeux/TP3ProgJeux.vcxproj
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj
@@ -106,6 +106,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="input_manager.cpp" />
     <ClCompile Include="kamikaze.cpp" />
+    <ClCompile Include="kamikaze_factory.cpp" />
     <ClCompile Include="laser_bonus.cpp" />
     <ClCompile Include="laser_projectile.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -116,6 +117,7 @@
     <ClCompile Include="menu_factory.cpp" />
     <ClCompile Include="movable.cpp" />
     <ClCompile Include="nuke_bonus.cpp" />
+    <ClCompile Include="observer.cpp" />
     <ClCompile Include="pause_menu.cpp" />
     <ClCompile Include="player_character.cpp" />
     <ClCompile Include="point_bonus.cpp" />
@@ -148,6 +150,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="input_manager.h" />
     <ClInclude Include="kamikaze.h" />
+    <ClInclude Include="kamikaze_factory.h" />
     <ClInclude Include="laser_bonus.h" />
     <ClInclude Include="laser_projectile.h" />
     <ClInclude Include="liste.hpp" />
@@ -158,6 +161,7 @@
     <ClInclude Include="menu_factory.h" />
     <ClInclude Include="movable.h" />
     <ClInclude Include="nuke_bonus.h" />
+    <ClInclude Include="observer.h" />
     <ClInclude Include="pause_menu.h" />
     <ClInclude Include="pile.hpp" />
     <ClInclude Include="player_character.h" />
