--- a/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
+++ b/TP3ProgJeux/TP3ProgJeux.vcxproj.filters
@@ -168,9 +168,6 @@
     <ClCompile Include="automatic_bonus.cpp">
       <Filter>Fichiers sources\entity\movable\bonus</Filter>
     </ClCompile>
-    <ClCompile Include="laser_projectile.cpp">
-      <Filter>Fichiers sources</Filter>
-    </ClCompile>
     <ClCompile Include="observer.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
@@ -185,6 +182,12 @@
     </ClCompile>
     <ClCompile Include="shield.cpp">
       <Filter>Fichiers sources\entity\movable</Filter>
+    </ClCompile>
+    <ClCompile Include="laser_projectile.cpp">
+      <Filter>Fichiers sources\entity\movable\Projectile</Filter>
+    </ClCompile>
+    <ClCompile Include="nuke.cpp">
+      <Filter>Fichiers sources\entity\movable\Projectile</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -308,12 +311,6 @@
     <ClInclude Include="automatic_bonus.h">
       <Filter>Fichiers d%27en-tête\entity\movable\bonus</Filter>
     </ClInclude>
-    <ClInclude Include="automatic_projectile.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
-    <ClInclude Include="laser_projectile.h">
-      <Filter>Fichiers d%27en-tête</Filter>
-    </ClInclude>
     <ClInclude Include="observer.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
@@ -325,6 +322,15 @@
     </ClInclude>
     <ClInclude Include="shield.h">
       <Filter>Fichiers d%27en-tête\entity\movable</Filter>
+    </ClInclude>
+    <ClInclude Include="automatic_projectile.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\projectile</Filter>
+    </ClInclude>
+    <ClInclude Include="laser_projectile.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\projectile</Filter>
+    </ClInclude>
+    <ClInclude Include="nuke.h">
+      <Filter>Fichiers d%27en-tête\entity\movable\projectile</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
